# meshbox

./: .gitignore  LICENSE  boot.lua  build.zig  fs.c  fs.h  lua.c  lua.h  lua.lua  lua_boot.h  main.c  makefile  meshbox.h  meson.build  readme.md  roadmap  shader.glsl  shader.h
concept/: meshbox.lua  meshbox_setup.toml
demo/: cube.iqm  meshbox.iqm  meshbox.lua
lib/: meta.c
lib/c/: c.zig  meta.c  mojoal.c
lib/sokol-zig/: README-MESHBOX  build.zig
lib/sokol-zig/src/sokol/: sokol.zig
lib/ziglua/src/ziglua-5.4/: lib.zig
src/: boot.lua  entry.zig  glyphs.lua  iqm.zig  lua.zig  main.zig  meshbox.h  output.glsl.zig  render.glsl.zig
src/assets/: meshbox.blend  meshbox.blend1  meshbox_text.blend  meshbox_text.blend1
src/shaders/: output.glsl  render.glsl
zig-cache/o/17578cf0e38b6741e010b3cc1f0edac5/: cimport.h  cimport.h.d
zig-cache/o/58a1c396ee484d67b0e22c9610d6ec7f/: cimport.zig
zig-cache/o/6c2200dad7a10195881c14ddc7073ad4/: llvm-ar.id
zig-cache/o/6c7f865c023c164a6c3063d615759021/: cimport.h
zig-cache/o/79beffea99b7cdf91e6c4a541fed5350/: cimport.zig
zig-cache/o/8a58b146603ad200b8ecc48413cbe745/: cimport.h.d
zig-cache/o/ab17eb55148fa79ab4ed9f4f18e851e0/: llvm-ar.id
zig-cache/o/b782dde42eacbcec491874376d15563d/: builtin.zig
zig-cache/o/f13b8e30e4bc31903c663d189ac89f0c/: builtin.zig
zig-cache/options/: kh59p23UXKId3bWMadeQ0Yp6cv2kATA4qPk2nBQ2q_3IsG9JTjKRYS1YxdIMHL6s
